SERVER-6779 Correctly serialize ExpressionCoerceToBool